--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.14",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "tailwindcss": "^2.2.19",
     "uuid": "^8.3.2"
