--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "convert-array-to-csv": "^2.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.14",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
-    "tailwindcss": "^2.2.19",
-    "uuid": "^8.3.2"
+    "tailwindcss": "^2.2.19"
   },
   "name": "nfun-login",
   "version": "1.0.0",
