--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@
 version: '3'
 
 services:
-  node:
+  app:
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
-      - '3000:3000'
+      - '80:80'
     container_name: nfun-login
     command: npm start
     restart: always
@@ -18,13 +18,14 @@ services:
     container_name: mysql
     environment:
       - MYSQL_DATABASE=nfun
-      - MYSQL_USER=root
+      - MYSQL_USER=admin
       - MYSQL_ROOT_PASSWORD=153153
       - TZ=Asia/Seoul
-    volumes:
-      - ./db:/var/lib/mysql
+    # volumes:
+    #   - ./db:/var/lib/mysql
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+      - --lower_case_table_names=1
     ports:
       - 3306:3306
