--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "consolidate": "^0.16.0",
     "convert-array-to-csv": "^2.0.0",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "tailwindcss": "^2.2.19"
