--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.11",
     "body-parser": "^1.19.0",
     "consolidate": "^0.16.0",
     "convert-array-to-csv": "^2.0.0",
@@ -34,6 +35,5 @@
   },
   "name": "nfun-login",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js"
+  "description": ""
 }
