--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2",
+    "sequelize": "^6.13.0",
     "tailwindcss": "^2.2.19"
   },
   "name": "nfun-login",
