--- a/package.json
+++ b/package.json
@@ -4,9 +4,25 @@
   },
   "scripts": {
     "start": "node src/main.js",
-    "server": "nodemon src/main.js"
+    "server": "nodemon src/main.js",
+    "build": "pkg . --out-path bin",
+    "build:server": "babel src -d build"
+  },
+  "pkg": {
+    "scripts": "src/**/*.js",
+    "assets": [
+      "src/views/**",
+      "src/images/**",
+      "src/css/*.css"
+    ],
+    "targets": [
+      "node12-win-x64"
+    ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.8",
     "@types/node": "^15.0.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -15,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
+    "pkg": "^5.5.2",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "typescript": "^4.2.4"
@@ -32,6 +49,8 @@
     "sequelize": "^6.13.0",
     "tailwindcss": "^2.2.19"
   },
+  "main": "src/main.js",
+  "bin": "src/main.js",
   "name": "nfun-login",
   "version": "1.0.0",
   "description": ""
