--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": "14.16.1"
+    "node": "16.7"
   },
   "scripts": {
     "start": "node src/main.js",
@@ -44,10 +44,12 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "pug": "^3.0.2",
-    "sequelize": "^6.13.0",
-    "tailwindcss": "^2.2.19"
+    "request-ip": "^2.1.3",
+    "tailwindcss": "^2.2.19",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "main": "src/main.js",
   "bin": "src/main.js",
