--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - '80:80'
-    container_name: nfun-kart
-    command: npm start
+    container_name: nfun-login
+    volumes:
+      - ./logs:/app/logs
+    command: npm run start
     restart: unless-stopped
   mysql:
     image: mysql
@@ -17,11 +19,10 @@ services:
     container_name: mysql
     environment:
       - MYSQL_DATABASE=nfun
-      - MYSQL_USER=admin
-      - MYSQL_ROOT_PASSWORD=153153
+      - MYSQL_ROOT_PASSWORD=calico.1322
       - TZ=Asia/Seoul
-    # volumes:
-    #   - ./db:/var/lib/mysql
+    volumes:
+      - ./db:/var/lib/mysql
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
