--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "request-ip": "^2.1.3",
