--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "request-ip": "^2.1.3",
     "tailwindcss": "^2.2.19",
     "winston": "^3.7.2",
-    "winston-daily-rotate-file": "^4.6.1"
+    "winston-daily-rotate-file": "^4.6.1",
+    "xlsx": "^0.18.5"
   },
   "main": "src/main.js",
   "bin": "src/main.js",
